# My_portfolio

./: .gitignore  Dockerfile  Procfile  pyproject.toml  requirements.txt  vercel.json
My_portfolio/: asgi.py  settings.py  settings.py~  wsgi.py
main/: forms.py  views.py
main/static/main/css/: style.css  style.css~
staticfiles/main/css/: style.css
templates/main/: base.html  index.html  index.html~
