[tool.poetry]
name = "my-portfolio"
version = "0.1.0"
description = ""
authors = ["dspuliaiev <d.s.puliaiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
python-dotenv = "^1.0.1"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
